[package]
name = "netscan-relay"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
base64 = "0.22"
futures-util = "0.3"
netscan-proto = { path = "../netscan-proto" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
argon2 = "0.5"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "ring", "webpki-roots"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = "0.29"
tower = { version = "0.5", features = ["util"] }
serial_test = "3"
